# ewar-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml  example.env  schema.sql  setup_mongo.js
.github/workflows/: build.yaml
src/: handler.rs  main.rs  model.rs
src/commands/: ewar.rs  maint.rs  meta.rs  mod.rs
src/commands/ewar/: event.rs  game.rs  leaderboard.rs  mod.rs  moderation.rs  user.rs
src/util/: checks.rs  constants.rs  game.rs  mod.rs  paginate.rs  rating.rs  serialization.rs
