[package]
name = "ewar-bot"
version = "1.0.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.16", features = ["cargo"] }
itertools = "0.13.0"
pluralizer = "0.4.0"
serde = "1.0.188"
futures = "0.3.28"
mongodb = "3.1.0"
skillratings = "0.27.0"
rand = "0.8.5"
gix = "0.68.0"
discord-md = "3.0.0"
timeago = "0.4.2"
chrono = "0.4.38"
regex = "1.10.6"
bson = { version = "2.11.0", features = ["chrono-0_4"] }
async-std = "1.13.0"
tokio-cron = "0.1.3"
