[package]
name = "ewar-bot"
version = "1.0.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
serenity = "0.12.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.23", features = ["cargo"] }
itertools = "0.13.0"
pluralizer = "0.4.0"
serde = "1.0.215"
futures = "0.3.31"
mongodb = "3.1.0"
skillratings = "0.27.1"
rand = "0.8.5"
gix = "0.68.0"
discord-md = "3.0.0"
timeago = "0.4.2"
chrono = "0.4.39"
regex = "1.11.1"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
async-std = "1.13.0"
tokio-cron = "0.1.3"
dotenv = "0.15.0"
